--- a/InmobiliariaAPI/InmobiliariaAPI.csproj
+++ b/InmobiliariaAPI/InmobiliariaAPI.csproj
@@ -164,6 +164,8 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Clases\Class.cs" />
+    <Compile Include="Clases\clsCliente.cs" />
+    <Compile Include="Controllers\ClienteController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Dtos\DtoLogin.cs" />
