Fix: Sixtaxis controllers, Nombres de clases y Configuración del proyecto.

--- a/InmobiliariaAPI/InmobiliariaAPI.csproj
+++ b/InmobiliariaAPI/InmobiliariaAPI.csproj
@@ -218,20 +218,20 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Clases\Class.cs" />
     <Compile Include="Clases\clsArriendo.cs" />
+    <Compile Include="Clases\clsCypher.cs" />
+    <Compile Include="Clases\clsLogin.cs" />
     <Compile Include="Clases\clsTransacion.cs" />
+    <Compile Include="Clases\TokenValidatorHandler.cs" />
     <Compile Include="Controllers\ArriendoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\TransacionController.cs" />
-    <Compile Include="Clases\Login.cs" />
+    <Compile Include="Controllers\TransaccionController.cs" />
     <Compile Include="Clases\TokenGenerator.cs" />
     <Compile Include="Clases\clsCliente.cs" />
     <Compile Include="Clases\clsEmpleado.cs" />
     <Compile Include="Clases\clsVenta.cs" />
     <Compile Include="Controllers\ClienteController.cs" />
     <Compile Include="Controllers\EmpleadoController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Controllers\VentaController.cs" />
     <Compile Include="Dtos\DtoLogin.cs" />
     <Compile Include="Global.asax.cs">
