--- a/InmobiliariaAPI/Web.config
+++ b/InmobiliariaAPI/Web.config
@@ -14,10 +14,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	<!--Validación jwt-->
-	<add key="JWT_SECRET_KEY" value="Yeison,Johan,Santi,Juan David" />
+	<add key="JWT_SECRET_KEY" value="Yeisonservicios,Johanservicios,Santiservicios,JuanDavidservicios" />
 	<add key="JWT_AUDIENCE_TOKEN" value="http://localhost:53901" />
 	<add key="JWT_ISSUER_TOKEN" value="http://localhost:53901" />
-	<add key="JWT_EXPIRE_MINUTES" value="5" />
+	<add key="JWT_EXPIRE_MINUTES" value="90" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
@@ -82,7 +82,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="DBINMOBILIARIAEntities" connectionString="metadata=res://*/Models.DBInmobiliaria.csdl|res://*/Models.DBInmobiliaria.ssdl|res://*/Models.DBInmobiliaria.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=DBINMOBILIARIA;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DBINMOBILIARIAEntities" connectionString="metadata=res://*/Models.DBInmobiliaria.csdl|res://*/Models.DBInmobiliaria.ssdl|res://*/Models.DBInmobiliaria.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DBINMOBILIARIA;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
