feat: Add Perfil and Imagen_Inmueble tables with initial data; fix Consultar method parameter name

--- a/InmobiliariaAPI/Web.config
+++ b/InmobiliariaAPI/Web.config
@@ -82,7 +82,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="DBINMOBILIARIAEntities" connectionString="metadata=res://*/Models.DBInmobiliaria.csdl|res://*/Models.DBInmobiliaria.ssdl|res://*/Models.DBInmobiliaria.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DBINMOBILIARIA;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+<!--<add name="DBSuperEntities" connectionString="metadata=res://*/Models.DBSuper.csdl|res://*/Models.DBSuper.ssdl|res://*/Models.DBSuper.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=db18516.databaseasp.net;initial catalog=db18516;integrated security=False;User Id=db18516; Password=Jy3+8!pM#S2s; Encrypt=False; trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="DBINMOBILIARIAEntities" connectionString="metadata=res://*/Models.DBInmobiliaria.csdl|res://*/Models.DBInmobiliaria.ssdl|res://*/Models.DBInmobiliaria.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=db20589.public.databaseasp.net; initial catalog=db20589; integrated security=False; User Id=db20589; Password=D%q24xL?!9hY; Encrypt=False; trustservercertificate=True; MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
