--- a/WebInmobiliaria/WebInmobiliaria.csproj
+++ b/WebInmobiliaria/WebInmobiliaria.csproj
@@ -167,13 +167,17 @@
     <Content Include="Paginas\Estilos\select2.css" />
     <Content Include="Paginas\Estilos\select2.min.css" />
     <Content Include="Paginas\Estilos\styles.css" />
+    <Content Include="Paginas\Estilos\Stylesheet\LandPage.css" />
     <Content Include="Paginas\Estilos\Stylesheet\Login.css" />
+    <Content Include="Paginas\Estilos\Stylesheet\Menu.css" />
     <Content Include="Paginas\Estilos\tempusdominus-bootstrap-4.css" />
     <Content Include="Paginas\Estilos\tempusdominus-bootstrap-4.min.css" />
     <Content Include="Paginas\Estilos\webfonts\fa-brands-400.svg" />
     <Content Include="Paginas\Estilos\webfonts\fa-regular-400.svg" />
     <Content Include="Paginas\Estilos\webfonts\fa-solid-900.svg" />
+    <Content Include="Paginas\LandPage.html" />
     <Content Include="Paginas\Login.html" />
+    <Content Include="Paginas\Menu-Landpage.html" />
     <Content Include="Paginas\Menu.html" />
     <Content Include="Paginas\MenuLateral.html" />
     <Content Include="Paginas\Pagina1.html" />
@@ -212,6 +216,7 @@
     <Content Include="Paginas\Estilos\webfonts\fa-solid-900.woff" />
     <Content Include="Paginas\Estilos\webfonts\fa-solid-900.woff2" />
     <Content Include="wwwroot\pages\images\extendedLogo.png" />
+    <Content Include="wwwroot\pages\images\LANDPAGE-BACKGROUND-IMAGE.png" />
     <Content Include="wwwroot\pages\images\minimalLogo.png" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
