--- a/WebInmobiliaria/WebInmobiliaria.csproj
+++ b/WebInmobiliaria/WebInmobiliaria.csproj
@@ -137,7 +137,7 @@
     <Content Include="Content\bootstrap-grid.rtl.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
-    <Content Include="Paginas\Empleado\DetalleImagen.html" />
+    <Content Include="Paginas\Cliente\DetalleImagen.html" />
     <Content Include="Paginas\Estilos\adminlte.css" />
     <Content Include="Paginas\Estilos\adminlte.min.css" />
     <Content Include="Paginas\Estilos\all.min.css" />
@@ -168,6 +168,7 @@
     <Content Include="Paginas\Estilos\select2.css" />
     <Content Include="Paginas\Estilos\select2.min.css" />
     <Content Include="Paginas\Estilos\styles.css" />
+    <Content Include="Paginas\Estilos\Stylesheet\cliente.css" />
     <Content Include="Paginas\Estilos\Stylesheet\DetalleImagen.css" />
     <Content Include="Paginas\Estilos\Stylesheet\GestioVisita.css" />
     <Content Include="Paginas\Estilos\Stylesheet\LandPage.css" />
@@ -178,10 +179,10 @@
     <Content Include="Paginas\Estilos\webfonts\fa-brands-400.svg" />
     <Content Include="Paginas\Estilos\webfonts\fa-regular-400.svg" />
     <Content Include="Paginas\Estilos\webfonts\fa-solid-900.svg" />
-    <Content Include="Paginas\Empleado\GestionDeVisita.html" />
-    <Content Include="Paginas\Empleado\LandPage.html" />
+    <Content Include="Paginas\Cliente\Cliente.html" />
+    <Content Include="Paginas\Cliente\LandPage.html" />
     <Content Include="Paginas\Login.html" />
-    <Content Include="Paginas\Empleado\Menu-Landpage.html" />
+    <Content Include="Paginas\Cliente\Menu-Landpage.html" />
     <Content Include="Paginas\Menu.html" />
     <Content Include="Paginas\MenuLateral.html" />
     <Content Include="Paginas\Pagina1.html" />
