Fix: Refactorizar: Actualizar el modelo de base de datos y eliminar la entidad sysdiagram no utilizada- Se añadió el modelo DEPARTAMENTO y se asociaron relaciones en el diagrama EDMX.- Se limpiaron los espacios en blanco en varios archivos de modelo para mantener la consistencia.- Se eliminó el modelo sysdiagram ya que ya no es necesario.- Se aseguraron las configuraciones adecuadas de serialización JSON con atributos [JsonIgnore] en múltiples modelos.- Se actualizó el modelo INMUEBLE para incluir propiedades y relaciones adicionales.

--- a/InmobiliariaAPI/InmobiliariaAPI.csproj
+++ b/InmobiliariaAPI/InmobiliariaAPI.csproj
@@ -270,6 +270,9 @@
     <Compile Include="Models\DECORACION_MODELO.cs">
       <DependentUpon>DBInmobiliaria.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\DEPARTAMENTO.cs">
+      <DependentUpon>DBInmobiliaria.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\DETALLE_COMPRA_PROVEEDOR.cs">
       <DependentUpon>DBInmobiliaria.tt</DependentUpon>
     </Compile>
@@ -310,9 +313,6 @@
       <DependentUpon>DBInmobiliaria.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\SEDE.cs">
-      <DependentUpon>DBInmobiliaria.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\sysdiagram.cs">
       <DependentUpon>DBInmobiliaria.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\TIPO_DOCUMENTO.cs">
