--- a/InmobiliariaAPI/Web.config
+++ b/InmobiliariaAPI/Web.config
@@ -13,24 +13,16 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-	<!--Validación jwt-->
-	<add key="JWT_SECRET_KEY" value="Yeisonservicios,Johanservicios,Santiservicios,JuanDavidservicios" />
-	<add key="JWT_AUDIENCE_TOKEN" value="http://localhost:53901" />
-	<add key="JWT_ISSUER_TOKEN" value="http://localhost:53901" />
-	<add key="JWT_EXPIRE_MINUTES" value="90" />
+    <!--Validación jwt-->
+    <add key="JWT_SECRET_KEY" value="Yeisonservicios,Johanservicios,Santiservicios,JuanDavidservicios" />
+    <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:53901" />
+    <add key="JWT_ISSUER_TOKEN" value="http://localhost:53901" />
+    <add key="JWT_EXPIRE_MINUTES" value="90" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
   </system.web>
-  <system.webServer>
-    <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
-  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -54,6 +46,14 @@
         <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
       </dependentAssembly>
       <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
+      </dependentAssembly>
+      <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
@@ -63,15 +63,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.9.0" newVersion="5.2.9.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
+        <bindingRedirect oldVersion="1.0.0.0-5.3.0.0" newVersion="5.3.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -82,7 +74,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-<!--<add name="DBSuperEntities" connectionString="metadata=res://*/Models.DBSuper.csdl|res://*/Models.DBSuper.ssdl|res://*/Models.DBSuper.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=db18516.databaseasp.net;initial catalog=db18516;integrated security=False;User Id=db18516; Password=Jy3+8!pM#S2s; Encrypt=False; trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="DBSuperEntities" connectionString="metadata=res://*/Models.DBSuper.csdl|res://*/Models.DBSuper.ssdl|res://*/Models.DBSuper.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=db18516.databaseasp.net;initial catalog=db18516;integrated security=False;User Id=db18516; Password=Jy3+8!pM#S2s; Encrypt=False; trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <add name="DBINMOBILIARIAEntities" connectionString="metadata=res://*/Models.DBInmobiliaria.csdl|res://*/Models.DBInmobiliaria.ssdl|res://*/Models.DBInmobiliaria.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=db20589.public.databaseasp.net; initial catalog=db20589; integrated security=False; User Id=db20589; Password=D%q24xL?!9hY; Encrypt=False; trustservercertificate=True; MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
@@ -90,4 +82,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+<system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer></configuration>
