--- a/WebInmobiliaria/WebInmobiliaria.csproj
+++ b/WebInmobiliaria/WebInmobiliaria.csproj
@@ -179,7 +179,7 @@
     <Content Include="Paginas\Estilos\webfonts\fa-brands-400.svg" />
     <Content Include="Paginas\Estilos\webfonts\fa-regular-400.svg" />
     <Content Include="Paginas\Estilos\webfonts\fa-solid-900.svg" />
-    <Content Include="Paginas\Cliente\Cliente.html" />
+    <Content Include="Paginas\Cliente\GestionVisita.html" />
     <Content Include="Paginas\Cliente\LandPage.html" />
     <Content Include="Paginas\Login.html" />
     <Content Include="Paginas\Cliente\Menu-Landpage.html" />
