--- a/WebInmobiliaria/WebInmobiliaria.csproj
+++ b/WebInmobiliaria/WebInmobiliaria.csproj
@@ -142,6 +142,10 @@
     <Content Include="Paginas\Cliente\InmueblesCatalogo.html" />
     <Content Include="Paginas\Cliente\LandPage.html" />
     <Content Include="Paginas\Cliente\Menu-Landpage.html" />
+    <Content Include="Paginas\Empleado\GestionEmpleado.html" />
+    <Content Include="Paginas\Empleado\GestionTransaccion.html" />
+    <Content Include="Paginas\Empleado\IndexEmpleado.html" />
+    <Content Include="Paginas\Empleado\MenuEmpleado.html" />
     <Content Include="Paginas\Estilos\adminlte.css" />
     <Content Include="Paginas\Estilos\adminlte.min.css" />
     <Content Include="Paginas\Estilos\all.min.css" />
@@ -175,6 +179,7 @@
     <Content Include="Paginas\Estilos\Stylesheet\cliente.css" />
     <Content Include="Paginas\Estilos\Stylesheet\DetalleImagen.css" />
     <Content Include="Paginas\Estilos\Stylesheet\GestioVisita.css" />
+    <Content Include="Paginas\Estilos\Stylesheet\IndexEmpleado.css" />
     <Content Include="Paginas\Estilos\Stylesheet\InmueblesCatalogo.css" />
     <Content Include="Paginas\Estilos\Stylesheet\LandPage.css" />
     <Content Include="Paginas\Estilos\Stylesheet\Login.css" />
@@ -184,18 +189,20 @@
     <Content Include="Paginas\Estilos\webfonts\fa-brands-400.svg" />
     <Content Include="Paginas\Estilos\webfonts\fa-regular-400.svg" />
     <Content Include="Paginas\Estilos\webfonts\fa-solid-900.svg" />
-    <Content Include="Paginas\Cliente\GestionVisita.html" />
+    <Content Include="Paginas\Empleado\GestionVisita.html" />
     <Content Include="Paginas\Cliente\LandPage.html" />
-    <Content Include="Paginas\GestionInmuebles.html" />
-    <Content Include="Paginas\Login.html" />
+    <Content Include="Paginas\Empleado\GestionInmuebles.html" />
+    <Content Include="Paginas\Empleado\Login.html" />
     <Content Include="Paginas\Menu.html" />
     <Content Include="Paginas\MenuLateral.html" />
     <Content Include="Paginas\Pagina1.html" />
     <Content Include="Paginas\Pagina2.html" />
     <Content Include="Paginas\PaginaBase.html" />
+    <Content Include="Paginas\Scripts\Cliente\MenuCliente.js" />
     <Content Include="Paginas\Scripts\Comunes\Comunes.js" />
     <Content Include="Paginas\Scripts\Comunes\CRUD.js" />
-    <Content Include="Paginas\Scripts\InmueblesCatalogo.js" />
+    <Content Include="Paginas\Scripts\Cliente\InmueblesCatalogo.js" />
+    <Content Include="Paginas\Scripts\Empleado\MenuEmpleado.js" />
     <Content Include="Paginas\Scripts\Login.js" />
     <Content Include="Paginas\Scripts\Menu.js" />
     <Content Include="Paginas\Scripts\MenuLateral.js" />
@@ -228,6 +235,7 @@
     <Content Include="Paginas\Estilos\webfonts\fa-solid-900.woff2" />
     <Content Include="wwwroot\pages\images\extendedLogo.png" />
     <Content Include="wwwroot\pages\images\imagen de prueba.png" />
+    <Content Include="wwwroot\pages\images\indexEmp.png" />
     <Content Include="wwwroot\pages\images\LANDPAGE-BACKGROUND-IMAGE.png" />
     <Content Include="wwwroot\pages\images\minimalLogo.png" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
