fix: Añadir punto y coma faltante en el método Insertar de clsVisita y actualizar el archivo del proyecto para incluir nuevas clases y controladores.

--- a/InmobiliariaAPI/InmobiliariaAPI.csproj
+++ b/InmobiliariaAPI/InmobiliariaAPI.csproj
@@ -219,18 +219,38 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Clases\clsCiudad.cs" />
+    <Compile Include="Clases\clsDepartamento.cs" />
+    <Compile Include="Clases\clsEstadoInmueble.cs" />
+    <Compile Include="Clases\clsEstadoPago.cs" />
+    <Compile Include="Clases\clsFormasPago.cs" />
+    <Compile Include="Clases\clsGenero.cs" />
     <Compile Include="Clases\clsImagenInmueble.cs" />
     <Compile Include="Clases\clsArriendo.cs" />
     <Compile Include="Clases\clsCypher.cs" />
     <Compile Include="Clases\clsInmueble.cs" />
     <Compile Include="Clases\clsLogin.cs" />
+    <Compile Include="Clases\clsTipoDePago.cs" />
+    <Compile Include="Clases\clsTipoDocumento.cs" />
+    <Compile Include="Clases\clsTipoTelefono.cs" />
+    <Compile Include="Clases\clsTipoTransaccion.cs" />
     <Compile Include="Clases\clsTransacion.cs" />
     <Compile Include="Clases\clsUsuario.cs" />
+    <Compile Include="Clases\clsVisita.cs" />
+    <Compile Include="Clases\TipoEmpleado.cs" />
     <Compile Include="Clases\TokenValidatorHandler.cs" />
     <Compile Include="Controllers\ArriendoController.cs" />
+    <Compile Include="Controllers\CiudadController.cs" />
+    <Compile Include="Controllers\DepartamentoController.cs" />
+    <Compile Include="Controllers\GeneroController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ImaganesInmuebleController.cs" />
     <Compile Include="Controllers\InmuebleController.cs" />
+    <Compile Include="Controllers\TipoDocumentoController.cs" />
+    <Compile Include="Controllers\TipoEmpleadoController.cs" />
+    <Compile Include="Controllers\TipoPagoController.cs" />
+    <Compile Include="Controllers\TipoTelefonoController.cs" />
+    <Compile Include="Controllers\TipoTransaccionController.cs" />
     <Compile Include="Controllers\TransaccionController.cs" />
     <Compile Include="Clases\TokenGenerator.cs" />
     <Compile Include="Clases\clsCliente.cs" />
@@ -241,6 +261,7 @@
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\UsuariosController.cs" />
     <Compile Include="Controllers\VentaController.cs" />
+    <Compile Include="Controllers\VisitasController.cs" />
     <Compile Include="Dtos\DtoLogin.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
