--- a/WebInmobiliaria/WebInmobiliaria.csproj
+++ b/WebInmobiliaria/WebInmobiliaria.csproj
@@ -194,6 +194,7 @@
     <Content Include="Paginas\Empleado\GestionInmuebles.html" />
     <Content Include="Paginas\Empleado\Login.html" />
     <Content Include="Paginas\Imagenes\Editar.png" />
+    <Content Include="Paginas\Imagenes\Eliminar.png" />
     <Content Include="Paginas\Menu.html" />
     <Content Include="Paginas\MenuLateral.html" />
     <Content Include="Paginas\Pagina1.html" />
